# sph

./: CMakeLists.txt
input/: particles_2d_10.txt  particles_2d_100.txt  particles_2d_1000.txt  particles_2d_10000.txt  particles_2d_10s.txt  particles_2d_2000.txt  pos_1.txt  pos_10.txt  pos_100.txt  pos_100000.txt  pos_100_1.txt  pos_125.txt  pos_150.txt  pos_20.txt  pos_40000.txt  pos_5.txt  pos_60000.txt  pos_8.txt  pos_80000.txt
src/: another_main.hpp  another_phy.hpp  check.hpp  main.cpp  physics.hpp  physics_boundary.hpp  physics_debug.hpp  shader_demo  sph_shaders  test.cpp  test.sh  yet_another_physics.hpp
src/utils/: dec.hpp  neighbour.hpp  particle.hpp
